add sesssionid. debug lost msg on readclient

and finally , we got many cases run:

/mongo-python-driver$ nosetests test/test_connection.py -xv
test_auto_start_request (test.test_connection.TestConnection) ... ok
test_connect (test.test_connection.TestConnection) ... ok
test_constants (test.test_connection.TestConnection) ... ok
test_contextlib (test.test_connection.TestConnection) ... ok
test_copy_db (test.test_connection.TestConnection) ... ok
test_database_names (test.test_connection.TestConnection) ... ok
test_disconnect (test.test_connection.TestConnection) ... ok
test_document_class (test.test_connection.TestConnection) ... ok
test_drop_database (test.test_connection.TestConnection) ... SKIP: This test often fails due to SERVER-2329
test_fork (test.test_connection.TestConnection) ... ok
test_from_uri (test.test_connection.TestConnection) ... pymongo/connection.py:301: DeprecationWarning: slave_okay is deprecated. Please use read_preference instead.
  "use read_preference instead.", DeprecationWarning)
ok
test_fsync_lock_unlock (test.test_connection.TestConnection) ... ok
test_get_db (test.test_connection.TestConnection) ... ok
test_getters (test.test_connection.TestConnection) ... ok
test_host_w_port (test.test_connection.TestConnection) ... ok
test_interrupt_signal (test.test_connection.TestConnection) ... ok
test_ipv6 (test.test_connection.TestConnection) ... SKIP: No IPv6
test_iteration (test.test_connection.TestConnection) ... ok
test_network_timeout (test.test_connection.TestConnection) ... ok
test_operation_failure_with_request (test.test_connection.TestConnection) ... ok
test_operation_failure_without_request (test.test_connection.TestConnection) ... ok
test_repr (test.test_connection.TestConnection) ... ok
test_timeouts (test.test_connection.TestConnection) ... ok
test_types (test.test_connection.TestConnection) ... ok
test_tz_aware (test.test_connection.TestConnection) ... ok
test_with_start_request (test.test_connection.TestConnection) ... ok

----------------------------------------------------------------------
Ran 26 tests in 37.266s

OK (SKIP=2)